messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -165,10 +165,8 @@ carteOsm=Carte OSM
 nomexiste=Ce nom existe déjà
 
 # Ruche detail clone
-evenementPesee=Ajouter un événement Pesée
 evenementCommentaire=Ajouter un événement Commentaire
 evenementCommentaireRuche=Ajouter un événement Commentaire ruche
-evenementCadres=Ajouter un événement Cadres
 pesee=Pesée
 
 # rucheCadreForm
@@ -285,40 +283,41 @@ traitementLot=Traitement Varroa du lot d'essaims
 commentaireLot=Ajout d'un commentaire à un lot d'essaims 
 
 # essaim
-evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
 essaim=Essaim
 Pasdessaim=Pas d'essaim
 lesEssaims=Essaims
-nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
 traitement=Traitement varroa
 enleverEssaim=Enlever l'essaim de la ruche 
-associerRucheEssaim=Associer une ruche à cet essaim
 listeEssaims=Liste des essaims
 actionSucre=Sucre
 sucreAjout=Sucre ajout
 sucreRestant=Sucre restant
 ajoutSucre=Ajout de sucre 
 dispersion=Dispersion 
-evenementSucre=Ajouter un événement Sucre
-evenementTraitement=Ajouter un événement Traitement
-evenementDispersion=Disperser/Remérer
 associationruche=Associer avec une ruche
 association=Association
 essaimdanslaruche=Cet essaim est dans la ruche
 mettreessaimdanslaruche=Mettre cet essaim dans le ruche :
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 
-essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
-supprimeressaimevenements=Supprimer cet essaim et ses événements ?
-supprimeressaim=Supprimer cette essaim ?
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
-graphedescendance=Graphe de descendance
 
 cloneessaimcrees=Essaim(s) {0} créé(s)
 
-# essaimDetail
+# essaimDetail.html
+essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
+supprimeressaimevenements=Supprimer cet essaim et ses événements ?
+supprimeressaim=Supprimer cette essaim ?
 nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
+nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
+graphedescendance=Graphe de descendance
+evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
+evenementSucre=Ajouter un événement Sucre
+evenementTraitement=Ajouter un événement Traitement
+evenementDispersion=Disperser/Remérer
+evenementPesee=Ajouter un événement Pesée
+evenementCadres=Ajouter un événement Cadres
 
 # essaimDispersionForm
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
@@ -386,10 +385,8 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolteDetail.html
-# detailRecolte=Détail de la récolte
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
-# recolteHausse=Récolte - Hausse
 recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
 enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
 supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
