--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -165,10 +165,8 @@ carteOsm=OSM Map
 nomexiste=This name already exist
 
 # Ruche detail clone
-evenementPesee=Add a weight event
 evenementCommentaire=Add a comment event
 evenementCommentaireRuche=Add a hive comment event
-evenementCadres=Add a frame event
 pesee=Weighing
 
 # rucheCadreForm
@@ -285,40 +283,41 @@ traitementLot=Batch Varroa treatment
 commentaireLot=Add a comment to the batch of swarms 
 
 # essaim
-evenementCommentaireEssaim=Add a swarm comment event
 essaim=Swarm
 Pasdessaim=No swarm
 lesEssaims=Swarms
-nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
 traitement=Varroa treatment
 enleverEssaim=Remove the swarm from the hive 
-associerRucheEssaim=Associate a hive to this swarm
 listeEssaims=Swarms list
 actionSucre=Sugar
 sucreAjout=Added sugar
 sucreRestant=Left sugar
 ajoutSucre=Add sugar 
 dispersion=Dispersing 
-evenementSucre=Add a sugar event
-evenementTraitement=Add a treatment event
-evenementDispersion=Add a dispersion event/Change queen
 associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
 mettreessaimdanslaruche=Put this swarm in hive :
 echangePositionsRuches=Exchange positions of hives {0} and {1}
 
-essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
-supprimeressaimevenements=Delete this swarm and his events?
-supprimeressaim=Delete this swarm?
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
-graphedescendance=Descendants graph
 
 cloneessaimcrees=Swarm(s) {0} created
 
-# essaimDetail
+# essaimDetail.html
+essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
+supprimeressaimevenements=Delete this swarm and his events?
+supprimeressaim=Delete this swarm?
 nexistentPasOuPasVides=do not exist or are not empty
+nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
+graphedescendance=Descendants graph
+evenementCommentaireEssaim=Add a swarm comment event
+evenementSucre=Add a sugar event
+evenementTraitement=Add a treatment event
+evenementDispersion=Add a dispersion event/Change queen
+evenementPesee=Add a weight event
+evenementCadres=Add a frame event
 
 # essaimDispersionForm
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
@@ -385,10 +384,8 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolteDetail.html
-# detailRecolte=Harvest detail
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
-# recolteHausse=Harvest - Supers
 recolteHausseDepot=Remove all supers of the harvest from their hives
 enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
 supprimerrecolteethausses=Remove this harvest and all its supers?
