messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -363,19 +363,16 @@ LAVANDE=Lavande
 CHATAIGNIER=Châtaignier
 TOUTES_FLEURS=Toutes fleurs
 ROMARIN=Romarin
-recoltesannees=Récoltes par années, poids de miel mis en pots (kg)
-ajoutretraithaussesrecolte=Ajout/Retrait de hausses
-enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
-
+# recoltesannees=Récoltes par années, poids de miel mis en pots (kg)
 
 # RecolteStatEssaim
 ProductionEssaimRecolte=Production Essaim/Récolte
 
 ProductionRuchersRecolte=Production Ruchers par récolte
 
-# récolte choix hausses
+# recolteChoixHausses.html
+ajoutretraithaussesrecolte=Ajout/Retrait de hausses
 haussesRecolte=Hausses de la récolte
-choixHausesRecolte=Choix des hausses de la récolte
 retirerHausses=Retirer des hausses
 selecthaussestraiter=Sélectionner les hausses à traiter
 
@@ -385,6 +382,7 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolteDetail.html
+enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
 recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
@@ -393,6 +391,7 @@ supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
 statistiquesessaims=Statistiques essaims
 saisirpoids=Saisir les poids
 totalPourLaRuche=Total pour la ruche
+choixHausesRecolte=Choix des hausses de la récolte
 
 # recoltesStat.html
 productionessaim=Production par essaim.
