--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -363,18 +363,16 @@ LAVANDE=Lavander
 CHATAIGNIER=Chestnut tree
 TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
-recoltesannees=Harvests by years, weight of honey in pots (kg)
-ajoutretraithaussesrecolte=Addition/Removal of supers
-enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
+# recoltesannees=Harvests by years, weight of honey in pots (kg)
 
 # RecolteStatEssaim
 ProductionEssaimRecolte=Production Swarm/Harvest
 
 ProductionRuchersRecolte=Production Apiaries per harvest
 
-# récolte choix hausses
+# recolteChoixHausses.html
+ajoutretraithaussesrecolte=Addition/Removal of supers
 haussesRecolte=Harvest supers
-choixHausesRecolte=Select harvest supers
 retirerHausses=Remove supers
 selecthaussestraiter=Select the supers to be processed
 
@@ -384,6 +382,8 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolteDetail.html
+choixHausesRecolte=Select harvest supers
+enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
 recolteHausseDepot=Remove all supers of the harvest from their hives
