messages.properties améliorations

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -15,9 +15,6 @@ listedetail=Liste détaillée
 deploie=Déploiement du war
 downloaddump=Download dump base
 downloadschema=Download schéma base
-menuessaim=Essaim
-menuruche=Ruche
-menuhausse=Hausse
 Admin=Admin
 logs=Logs
 
@@ -64,7 +61,7 @@ ruchesAvecHaussesDepot=ruche(s) avec hausses au dépôt
 ruchesSansEssaimPasDepot=ruche(s) sans essaim qui ne sont pas au dépôt
 essaimsActifsHorsRuche=essaim(s) actif(s) hors ruche
 ruchersLoinDeLeursRuches=rucher(s) à plus de {0}m du barycentre de leurs ruches
-		
+
 # Templates commun
 modifier=Modifier
 nom=Nom
@@ -153,7 +150,6 @@ rucheType= Type de ruche
 # ruche
 ruche=Ruche
 ajouterRuche=Ajouter une ruche
-ajouterRucheType=Ajouter un type de ruche
 ajoutRuche=Ajout d'une ruche
 listeRuches=Liste des ruches
 daterucher=Date rucher
@@ -172,7 +168,7 @@ pesee=Pesée
 # rucheCadreForm
 cadresLe=cadres le
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
- 
+
 # essaimGraphe.html
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
@@ -358,12 +354,13 @@ poidsMielHausses=Poids de miel hausses
 remplissage=Remplissage
 ajouterRecolte=Ajouter une récolte
 listeRecoltes=Liste des récoltes
+
+# enum TypeMiel.java
 GARRIGUE=Garrigue
 LAVANDE=Lavande
 CHATAIGNIER=Châtaignier
 TOUTES_FLEURS=Toutes fleurs
 ROMARIN=Romarin
-# recoltesannees=Récoltes par années, poids de miel mis en pots (kg)
 
 # RecolteStatEssaim
 ProductionEssaimRecolte=Production Essaim/Récolte
@@ -396,7 +393,7 @@ choixHausesRecolte=Choix des hausses de la récolte
 # recoltesStat.html
 productionessaim=Production par essaim.
 
-# Evénements
+# enum TypeEvenement.java
 RUCHEAJOUTRUCHER=Ajout dans rucher
 RETRAITESSAIMRUCHE=Essaim retiré de la ruche
 HAUSSEPOSERUCHE=Ajout hausse
@@ -413,7 +410,8 @@ ESSAIMDISPERSION=Dispersion de l'essaim
 RUCHEPESEE=Poids de la ruche
 RUCHECADRE=Cadres de la ruche
 AJOUTESSAIMRUCHE=Essaim mis dans ruche
-evenementrecolte=Hausse récolte
+
+# Evénements
 listeEvenements=Liste des événements
 finTraitement=Fin du traitement
 evenementssucre=Événements sucre
@@ -428,7 +426,7 @@ remplissagehausse=Remplissage hausse
 rucherucher=Ajout ruche
 diff=Différence
 
-# types de ruche
+# rucheTypesListe.html
 rucheTypes=Types de ruches
 ajouterRucheType=Ajouter un type de ruche
 
@@ -445,12 +443,9 @@ typeEvenement=Type d'événement
 evenement=Événement
 evenements=Événements
 ajouterEvenement=Ajouter un événement
-supprimerEvenement=Supprimer cet événement
 evenementCree=Créer un événement
 aucun=<Aucun>
 aucune=<Aucune>
-modifierevenement=Modifier cet événement
-supprimerevenement?=Supprimer cet événement ?
 supprimerhausseevenement=Supprimer cette hausse et ses événements ?
 supprimerhausse?=Supprimer cette hausse ?
 supprimerevenement=Supprimer cet événement ?
@@ -473,6 +468,5 @@ leverSoleil=Soleil Lever
 coucherSoleil=Soleil Coucher
 
 apiRest=API REST
-inactifs=Inactifs
 preferences=Préférences
 confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
