--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -15,9 +15,6 @@ listedetail=Detailed list
 deploie=Deploy war file
 downloaddump=Download database dump
 downloadschema=Download database schema
-menuessaim=Swarm
-menuruche=Hive
-menuhausse=Super
 Admin=Admin
 logs=Logs
 
@@ -153,7 +150,6 @@ rucheType= Hive type
 # ruche
 ruche=Hive
 ajouterRuche=Add a hive
-ajouterRucheType=Add a hive type
 ajoutRuche=Addirion of a hive
 listeRuches=Hives list
 daterucher=Apiary date
@@ -358,12 +354,13 @@ poidsMielHausses=Supers honey weight
 remplissage=Filling
 ajouterRecolte=Add a harvest
 listeRecoltes=Harvets list
+
+# enum TypeMiel.java
 GARRIGUE=Garrigue
 LAVANDE=Lavander
 CHATAIGNIER=Chestnut tree
 TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
-# recoltesannees=Harvests by years, weight of honey in pots (kg)
 
 # RecolteStatEssaim
 ProductionEssaimRecolte=Production Swarm/Harvest
@@ -396,7 +393,7 @@ totalPourLaRuche=Total for the hive
 # recoltesStat.html
 productionessaim=Production by swarm. 
 
-# Evénements
+# enum TypeEvenement.java
 RUCHEAJOUTRUCHER=Add in an apiary
 RETRAITESSAIMRUCHE=Swarm removed from hive
 RUCHERETRAITRUCHER=Remove from an apiary
@@ -414,7 +411,8 @@ ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
 AJOUTESSAIMRUCHE=Swarm set in hive
-evenementrecolte=Harvest super
+
+# Evénements
 listeEvenements=Events list
 finTraitement=End of treatment
 evenementssucre=Sugar events
@@ -428,7 +426,7 @@ cadreruche=Hive frame
 remplissagehausse=Super filling
 diff=Difference
 
-# types de ruche
+# rucheTypesListe.html
 rucheTypes=Hive types
 ajouterRucheType=Add a hive type
 
@@ -445,12 +443,9 @@ typeEvenement=Event type
 evenement=Event
 evenements=Events
 ajouterEvenement=Add event
-supprimerEvenement=Delete this event
 evenementCree=Create an event
 aucun=<None>
 aucune=<None>
-modifierevenement=Modify this event
-supprimerevenement?=Delete this event?
 supprimerhausseevenement=Delete this super and all its events?
 supprimerhausse?=Delete this super?
 supprimerevenement=Delete this event?
@@ -473,6 +468,5 @@ leverSoleil=Sun Rise
 coucherSoleil=Sun Set
 
 apiRest=REST API
-inactifs=Inactives
 preferences=Preferences
 confirmDeploie=Do you want to deploy the application from its sources on gitlab?
