messages.properties améliorations

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -8,7 +8,6 @@ Idhausseinconnu=Unknown super id
 cloneruchecreees=Hives(s) {0} created
 
 # include.html
-include.title=Hives
 include.footer= *** Ruches - GPL3 -
 liste=List
 listedetail=Detailed list
@@ -113,6 +112,8 @@ depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
+nomruchesvirgule=Hive names separated with a comma
+historique=History
 poidsVide=Weight
 nbCadres=Frames
 
@@ -120,18 +121,14 @@ nbCadres=Frames
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
 supprimerrucheeteven?=Delete this hive and its events?
 supprimercetteruche?=Delete this hive?
-nomruchesvirgule=Hive names separated with a comma
 nomexistentdeja=already exist(s)
 creer=Create
 cloner=Clone
 changerDeRucher=Move to another apiary
 dateAcquisition=Acquisition
 nbCadresMax=Frames max
-typeRuche=Type
 listeHausses=Supers list
-historique=History
 lesRuches=Hives
-ordre=Order
 
 # rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
@@ -178,7 +175,6 @@ lesRuchers=Apiaries
 contact=Contact
 adresse=Address
 ajouterRucher=Add an apiary
-ajouterRuchesRucher=Add hives
 listeRuchers=Apiaries list
 depot=Depot
 ressource=Resource
@@ -365,7 +361,6 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolteDetail.html
-choixHausesRecolte=Select harvest supers
 enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
@@ -375,20 +370,20 @@ supprimerrecolteethausses=Remove this harvest and all its supers?
 statistiquesessaims=Swarms statistics
 saisirpoids=Get weight
 totalPourLaRuche=Total for the hive
+choixHausesRecolte=Select harvest supers
 
 # recoltesStat.html
 productionessaim=Production by swarm. 
 
 # enum TypeEvenement.java
 RUCHEAJOUTRUCHER=Add in an apiary
-RETRAITESSAIMRUCHE=Swarm removed from hive
-RUCHERETRAITRUCHER=Remove from an apiary
+AJOUTESSAIMRUCHE=Swarm set in hive
 HAUSSEPOSERUCHE=Add a super
 HAUSSERETRAITRUCHE=Remove a super
+HAUSSEREMPLISSAGE=Super filling
 ESSAIMTRAITEMENT=Swarm treatment
 ESSAIMTRAITEMENTFIN=Samrm end of treatment
 ESSAIMSUCRE=Swarm sugar
-HAUSSEREMPLISSAGE=Super filling
 COMMENTAIRERUCHE=Hive comment 
 COMMENTAIREHAUSSE=Super comment
 COMMENTAIREESSAIM=Swarm comment
@@ -396,7 +391,6 @@ COMMENTAIRERUCHER=Apiary comment
 ESSAIMDISPERSION=Swarm dispersing
 RUCHEPESEE=Hive weight
 RUCHECADRE=Cadres de la ruche
-AJOUTESSAIMRUCHE=Swarm set in hive
 
 # Evénements
 listeEvenements=Events list
@@ -409,7 +403,7 @@ evenementremplissagehausse=Super filling events
 evenementsrucheajout=Hive add in apiary events
 poidsruche=Hive weight
 cadreruche=Hive frame
-remplissagehausse=Super filling
+rucherucher=Add a hive
 diff=Difference
 
 # rucheTypesListe.html
