infos.html ajout distance et surfaces butinage. traductions

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -60,6 +60,10 @@ ruchesAvecHaussesDepot=hive(s) with supers at the depot
 ruchesSansEssaimPasDepot=hive(s) without swarm not at the depot
 essaimsActifsHorsRuche=active swarm(s) outside the hive
 ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
+rayonkm=Radius (km)
+surfacekm2=Surface (km²)
+ruchesAPlusde=hive(s) more than {0}m from their apiaries
+ruchesSansEven=hive(s) without event for {0} weeks
 
 # Templates commun
 modifier=Modify
