--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -60,6 +60,10 @@ ruchesAvecHaussesDepot=ruche(s) avec hausses au dépôt
 ruchesSansEssaimPasDepot=ruche(s) sans essaim qui ne sont pas au dépôt
 essaimsActifsHorsRuche=essaim(s) actif(s) hors ruche
 ruchersLoinDeLeursRuches=rucher(s) à plus de {0}m du barycentre de leurs ruches
+rayonkm=Rayon (km)
+surfacekm2=Surface (km²)
+ruchesAPlusde=ruche(s) à plus de {0}m de leurs ruchers
+ruchesSansEven=ruche(s) sans événement depuis {0} semaines
 
 # Templates commun
 modifier=Modifier
