maj versions d3 chartjs jspdf

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -16,6 +16,13 @@ downloaddump=Download dump base
 downloadschema=Download schéma base
 Admin=Admin
 logs=Logs
+infos=Infos
+cadreruche=Cadre ruche
+rucherucher=Ajout ruche
+tous=Tous
+apiRest=API REST
+preferences=Préférences
+confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
 
 # parametresForm.html
 voirInactif=Afficher les inactifs
@@ -39,7 +46,6 @@ deconnexion=Déconnexion
 resetPassword=Réinitialistation du mot de passe
 
 # infos.html
-infos=Infos
 ruchersdepot=ruchers (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
@@ -86,8 +92,12 @@ modification=Modification
 recherche=Recherche...
 poidskg=Poids (kg)
 Total=Total
-Totalpage=Total page
 Ordre=Ordre
+
+# recoltesStatEssaim.html
+Totalpage=Total page
+ProductionEssaim=Production Essaims
+ProductionEssaimRecolte=Production Essaim/Récolte
 
 # ruchesListePlus.html ruchesListePlusRucher.html
 commentaire1=Commentaire1
@@ -100,7 +110,6 @@ Min=Min
 Moyen=Moyen
 Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
-ProductionEssaim=Production Essaims
 masquerInactif=Masquer les inactifs
 
 # rucherStatistiques.html
@@ -348,9 +357,6 @@ CHATAIGNIER=Châtaignier
 TOUTES_FLEURS=Toutes fleurs
 ROMARIN=Romarin
 
-# RecolteStatEssaim
-ProductionEssaimRecolte=Production Essaim/Récolte
-
 ProductionRuchersRecolte=Production Ruchers par récolte
 
 # recolteChoixHausses.html
@@ -406,8 +412,6 @@ evenementcadreruche=Événements cadre ruche
 evenementremplissagehausse=Événements remplissage hausse
 evenementsrucheajout=Événements ruche ajout rucher
 poidsruche=Poids ruche
-cadreruche=Cadre ruche
-rucherucher=Ajout ruche
 diff=Différence
 
 # rucheTypesListe.html
@@ -434,7 +438,6 @@ supprimerhausseevenement=Supprimer cette hausse et ses événements ?
 supprimerhausse?=Supprimer cette hausse ?
 supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
-tous=Tous
 
 # rucherMeteo.html
 meteo=Météo
@@ -450,7 +453,3 @@ pluieVol3h=Pluie vol/3h
 neigeVol3h=Neige vol/3h
 leverSoleil=Soleil Lever
 coucherSoleil=Soleil Coucher
-
-apiRest=API REST
-preferences=Préférences
-confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
