--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -16,6 +16,13 @@ downloaddump=Download database dump
 downloadschema=Download database schema
 Admin=Admin
 logs=Logs
+infos=Infos
+cadreruche=Hive frame
+rucherucher=Add a hive
+tous=All
+apiRest=REST API
+preferences=Preferences
+confirmDeploie=Do you want to deploy the application from its sources on gitlab?
 
 # parametresForm.html
 voirInactif=Show inactives
@@ -39,7 +46,6 @@ deconnexion=Disconnect
 resetPassword=Reset password
 
 # infos.html
-infos=Infos
 ruchersdepot=apiaries (with depot)
 rucheset=hives and 
 haussesactives=active supers	
@@ -86,8 +92,12 @@ modification=Modification
 recherche=Search...
 poidskg=Weight (kg)
 Total=Total
-Totalpage=Total page
 Ordre=Order
+
+# recoltesStatEssaim.html
+Totalpage=Total page
+ProductionEssaim=Swarm Production
+ProductionEssaimRecolte=Swarm/Harvest Production
 
 # ruchesListePlus.html ruchesListePlusRucher.html
 commentaire1=Comments1
@@ -100,7 +110,6 @@ Min=Min
 Moyen=Average
 Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
-ProductionEssaim=Production Swarm
 masquerInactif=Hide inactives
 
 # rucherStatistiques.html
@@ -348,9 +357,6 @@ CHATAIGNIER=Chestnut tree
 TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
 
-# RecolteStatEssaim
-ProductionEssaimRecolte=Production Swarm/Harvest
-
 ProductionRuchersRecolte=Production Apiaries per harvest
 
 # recolteChoixHausses.html
@@ -406,8 +412,6 @@ evenementcadreruche=Hive frame events
 evenementremplissagehausse=Super filling events
 evenementsrucheajout=Hive add in apiary events
 poidsruche=Hive weight
-cadreruche=Hive frame
-rucherucher=Add a hive
 diff=Difference
 
 # rucheTypesListe.html
@@ -434,7 +438,6 @@ supprimerhausseevenement=Delete this super and all its events?
 supprimerhausse?=Delete this super?
 supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
-tous=All
 
 # rucherMeteo.html
 meteo=Weather
@@ -450,7 +453,3 @@ pluieVol3h=Rain vol/3h
 neigeVol3h=Snow vol/3h
 leverSoleil=Sun Rise
 coucherSoleil=Sun Set
-
-apiRest=REST API
-preferences=Preferences
-confirmDeploie=Do you want to deploy the application from its sources on gitlab?
