ajout commentaire lot ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -157,6 +157,9 @@ ajouthausseXXsur=Ajout de la hausse {0} sur la
 # rucheTypesListe.html
 rucheType= Type de ruche
 
+# ruchesListe.html
+selectruchestraiter=Sélectionner les ruches à traiter
+
 # ruche
 ruche=Ruche
 ajouterRuche=Ajouter une ruche
@@ -255,7 +258,7 @@ personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est
 supprimercettepersonne=Supprimer cette personne ?
 
 # essaimsListe.html
-selectesssaimstraiter=Sélectionner les essaims à traiter
+selectessaimstraiter=Sélectionner les essaims à traiter
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
 evenementsCommentaire=Ajouter des événements Commentaire
@@ -280,7 +283,12 @@ ajoutSucreLot=Ajout de sucre au lot d'essaims
 traitementLot=Traitement Varroa du lot d'essaims 
 
 # essaimCommentaireLotForm.html
-commentaireLot=Ajout d'un commentaire à un lot d'essaims 
+commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
+
+###################################################################################################
+# rucheCommentaireLotForm.html
+commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
+###################################################################################################
 
 # essaim
 essaim=Essaim
