--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -157,6 +157,9 @@ ajouthausseXXsur=Add hive {0} on
 # rucheTypesListe.html
 rucheType= Hive type
 
+# ruchesListe.html
+selectruchestraiter=Select hives for treatment
+
 # ruche
 ruche=Hive
 ajouterRuche=Add a hive
@@ -255,7 +258,7 @@ personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an 
 supprimercettepersonne=Delete this person?
 
 # essaimsListe.html
-selectesssaimstraiter=Select swarms for treatment
+selectessaimstraiter=Select swarms for treatment
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
 evenementsCommentaire=Add comment events
@@ -280,7 +283,12 @@ ajoutSucreLot=Add sugar to the batch of swarms
 traitementLot=Batch Varroa treatment 
 
 # essaimCommentaireLotForm.html
-commentaireLot=Add a comment to the batch of swarms 
+commentaireLotEssaim=Add a comment to the batch of swarms
+
+###################################################################################################
+# rucheCommentaireLotForm.html
+commentaireLotRuche=Add a comment to the batch of hives  
+###################################################################################################
 
 # essaim
 essaim=Swarm
