ajout création commentaire lot de hausse

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -285,10 +285,11 @@ traitementLot=Traitement Varroa du lot d'essaims
 # essaimCommentaireLotForm.html
 commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
 
-###################################################################################################
 # rucheCommentaireLotForm.html
 commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
-###################################################################################################
+
+# hausseCommentaireLotForm.html
+commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 
 # essaim
 essaim=Essaim
