--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -285,10 +285,11 @@ traitementLot=Batch Varroa treatment
 # essaimCommentaireLotForm.html
 commentaireLotEssaim=Add a comment to the batch of swarms
 
-###################################################################################################
 # rucheCommentaireLotForm.html
 commentaireLotRuche=Add a comment to the batch of hives  
-###################################################################################################
+
+# hausseCommentaireLotForm.html
+commentaireLotHausses=Add a comment to the batch of supers
 
 # essaim
 essaim=Swarm
