RecolteHausseController.java internationalisation

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -7,6 +7,10 @@ Idhausseinconnu=Unknown super id
 # RucheController.java
 cloneruchecreees=Hives(s) {0} created
 
+# RecolteHausseController.java
+pasDeHausseAenlever=No supers to remove from their hives
+haussesEnlevees=Supers {0} have been removed from their hives {1}
+
 # include.html
 include.footer= *** Ruches - GPL3 -
 liste=List
