--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -7,6 +7,10 @@ Idhausseinconnu=Identifiant hausse inconnu
 # RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 
+# RecolteHausseController.java
+pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
+haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
+
 # include.html
 include.footer= *** Ruches - GPL3 - 
 liste=Liste
