messages.properties classement

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -219,9 +219,11 @@ listePlusRuchesOrdonnees=Liste détaillée des ruches ordonnée suivant le parco
 markerFixes=Marqueurs fixes
 enregistreDessin=Enregistrer le dessin
 rapprocher=Rapprocher les ruches trop éloignées
+rapprocher?=Rapprocher les ruches trop éloignées ?
 exportGPX=Export GPX
 exportKML=Export KML
 parcoursRecalcul=Re-calculer le parcours des ruches
+cercles=Cercles
 
 # carte ign
 ajoutderuches=Ajout de ruches
@@ -237,11 +239,9 @@ recentrer?=Recentrer tous les ruchers sur leurs ruches ?
 selectruchesajout=Sélectionner les ruches à ajouter
 ajoutruches=Ajout dans le rucher
 recentrer=Recentrer tous les ruchers sur leurs ruches
-rapprocher?=Rapprocher les ruches trop éloignées ?
 exportPng=Export PNG
 exportPdf=Export PDF
 statistiquesruchers=Statistiques ruchers
-cercles=Cercles
 distButinage=Distances de butinage
 
 # personnesListe.html
@@ -295,6 +295,9 @@ commentaireLotRuche=Ajout d'un commentaire à un lot de ruches
 # hausseCommentaireLotForm.html
 commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 
+# essaimAssociationForm.html
+echangePositionsRuches=Échanger les positions des ruches {0} et {1}
+
 # essaim
 essaim=Essaim
 Pasdessaim=Pas d'essaim
@@ -307,8 +310,9 @@ dispersion=Dispersion
 associationruche=Associer avec une ruche
 association=Association
 essaimdanslaruche=Cet essaim est dans la ruche
+
+# essaimAssociation.html
 mettreessaimdanslaruche=Mettre cet essaim dans le ruche :
-echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
@@ -356,7 +360,6 @@ recolte=Récolte
 lesRecoltes=Récoltes
 date=Date
 poidsMiel=Poids de miel
-poidsMielHausses=Poids de miel hausses
 remplissage=Remplissage
 ajouterRecolte=Ajouter une récolte
 
@@ -397,6 +400,7 @@ haussesRecolte=Hausses de la récolte
 
 # recoltesStat.html
 productionessaim=Production par essaim.
+poidsMielHausses=Poids de miel hausses
 
 # enum TypeEvenement.java
 RUCHEAJOUTRUCHER=Ajout dans rucher
