--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -219,9 +219,11 @@ listePlusRuchesOrdonnees=Hives ordered detailed list along the route
 markerFixes=Fixed markers
 enregistreDessin=Save drawing
 rapprocher=Bring closer hives that are too far
+rapprocher?=Bring closer hives that are too far?
 exportGPX=GPX export
 exportKML=KML export
 parcoursRecalcul=Re-calculate hive route
+cercles=Circles
 
 # carte ign
 ajoutderuches=Add hives
@@ -237,11 +239,9 @@ recentrer?=Recenter all apiaries on their hives?
 selectruchesajout=Select hives to add
 ajoutruches=Addition in hive
 recentrer=Recenter all apiaries on their hives
-rapprocher?=Bring closer hives that are too far?
 exportPng=PNG export
 exportPdf=PDF export
 statistiquesruchers=Apiary statistics
-cercles=Circles
 distButinage=Foraging distances
 
 # personnesListe.html
@@ -295,6 +295,9 @@ commentaireLotRuche=Add a comment to the batch of hives
 # hausseCommentaireLotForm.html
 commentaireLotHausses=Add a comment to the batch of supers
 
+# essaimAssociationForm.html
+echangePositionsRuches=Exchange positions of hives {0} and {1}
+
 # essaim
 essaim=Swarm
 Pasdessaim=No swarm
@@ -307,8 +310,9 @@ dispersion=Dispersing
 associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
+
+# essaimAssociation.html
 mettreessaimdanslaruche=Put this swarm in hive :
-echangePositionsRuches=Exchange positions of hives {0} and {1}
 
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
@@ -356,7 +360,6 @@ recolte=Harvest
 lesRecoltes=Harvests
 date=Date
 poidsMiel=Honey weight
-poidsMielHausses=Supers honey weight
 remplissage=Filling
 ajouterRecolte=Add a harvest
 
@@ -397,6 +400,7 @@ haussesRecolte=Harvest supers
 
 # recoltesStat.html
 productionessaim=Production by swarm. 
+poidsMielHausses=Supers honey weight
 
 # enum TypeEvenement.java
 RUCHEAJOUTRUCHER=Add in an apiary
