améliorations météo template et api java OWM

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -465,8 +465,10 @@ pression=Pression
 ventVitesse=Vent m/s
 ventDirection=Vent Direction
 nuages=Nuages
-# ventRafales=Vent Rafales
+ventRafales=Vent Rafales
 pluieVol3h=Pluie vol/3h
 neigeVol3h=Neige vol/3h
+pluieVol1h=Pluie vol/1h
+neigeVol1h=Neige vol/1h
 leverSoleil=Soleil Lever
 coucherSoleil=Soleil Coucher
