--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -465,8 +465,10 @@ pression=Pressure
 ventVitesse=Wind m/s
 ventDirection=Wind Direction
 nuages=Clouds
-# ventRafales=Wind Gusts
+ventRafales=Wind Gusts
 pluieVol3h=Rain vol/3h
 neigeVol3h=Snow vol/3h
+pluieVol1h=Rain vol/1h
+neigeVol1h=Snow vol/1h
 leverSoleil=Sun Rise
 coucherSoleil=Sun Set
