météo appel OWM en javascript

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -459,12 +459,14 @@ afficherrucheetc=Afficher/masquer ruche, essaim...
 # rucherMeteo.html
 meteo=Météo
 description=Description
-temperature=Température
-humidite=Humidité
-pression=Pression
+temperature=Temp
+humidite=Humid %
+rosee=Point rosée
+pression=Pression hPa
 ventVitesse=Vent m/s
 ventDirection=Vent Direction
-nuages=Nuages
+nuages=Nuages %
+visibilite=Visibilité m
 ventRafales=Vent Rafales
 pluieVol3h=Pluie vol/3h
 neigeVol3h=Neige vol/3h
@@ -472,3 +474,7 @@ pluieVol1h=Pluie vol/1h
 neigeVol1h=Neige vol/1h
 leverSoleil=Soleil Lever
 coucherSoleil=Soleil Coucher
+leverLune=Lune Lever
+coucherLune=Lune Coucher
+phaseLune=Lune Phase
+
