--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -459,12 +459,14 @@ afficherrucheetc=Show/hide hive, swarm...
 # rucherMeteo.html
 meteo=Weather
 description=Description
-temperature=Temperature
-humidite=Humidity
-pression=Pressure
+temperature=Temp
+humidite=Humid %
+rosee=Dew point
+pression=Pressure hPa
 ventVitesse=Wind m/s
 ventDirection=Wind Direction
-nuages=Clouds
+nuages=Clouds %
+visibilite=Visibility m
 ventRafales=Wind Gusts
 pluieVol3h=Rain vol/3h
 neigeVol3h=Snow vol/3h
@@ -472,3 +474,7 @@ pluieVol1h=Rain vol/1h
 neigeVol1h=Snow vol/1h
 leverSoleil=Sun Rise
 coucherSoleil=Sun Set
+leverLune=Moon Rise
+coucherLune=Moon Set
+phaseLune=Moon Phase
+
