meteo.html style

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -460,18 +460,19 @@ afficherrucheetc=Afficher/masquer ruche, essaim...
 meteo=Météo
 description=Description
 temperature=Temp
-humidite=Humid %
+humidite=Humid
 rosee=Point rosée
-pression=Pression hPa
-ventVitesse=Vent m/s
+pression=Pression
+uvi=Index UV
+ventVitesse=Vent
 ventDirection=Vent Direction
-nuages=Nuages %
-visibilite=Visibilité m
+nuages=Nuages
+visibilite=Visibilité
 ventRafales=Vent Rafales
-pluieVol3h=Pluie vol/3h
-neigeVol3h=Neige vol/3h
-pluieVol1h=Pluie vol/1h
-neigeVol1h=Neige vol/1h
+pluieVol3h=Pluie 3h
+neigeVol3h=Neige 3h
+pluieVol1h=Pluie 1h
+neigeVol1h=Neige 1h
 leverSoleil=Soleil Lever
 coucherSoleil=Soleil Coucher
 leverLune=Lune Lever
