--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -460,18 +460,19 @@ afficherrucheetc=Show/hide hive, swarm...
 meteo=Weather
 description=Description
 temperature=Temp
-humidite=Humid %
+humidite=Humid
 rosee=Dew point
-pression=Pressure hPa
-ventVitesse=Wind m/s
+pression=Pressure
+uvi=IV index
+ventVitesse=Wind
 ventDirection=Wind Direction
-nuages=Clouds %
-visibilite=Visibility m
+nuages=Clouds
+visibilite=Visibility
 ventRafales=Wind Gusts
-pluieVol3h=Rain vol/3h
-neigeVol3h=Snow vol/3h
-pluieVol1h=Rain vol/1h
-neigeVol1h=Snow vol/1h
+pluieVol3h=Rain 3h
+neigeVol3h=Snow 3h
+pluieVol1h=Rain 1h
+neigeVol1h=Snow 1h
 leverSoleil=Sun Rise
 coucherSoleil=Sun Set
 leverLune=Moon Rise
