--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -463,6 +463,7 @@ temperature=Temp
 humidite=Humid
 rosee=Dew point
 pression=Pressure
+tempRessent=Temp feel
 uvi=IV index
 ventVitesse=Wind
 ventDirection=Wind Direction
