meteo.html prévisions temp min max

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -457,6 +457,9 @@ supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
 
 # rucherMeteo.html
+aujourdhui=Aujourd'hui
+previsions=Prévisions
+historique=Historique
 meteo=Météo
 description=Description
 temperature=Temp
@@ -479,4 +482,5 @@ coucherSoleil=Soleil Coucher
 leverLune=Lune Lever
 coucherLune=Lune Coucher
 phaseLune=Lune Phase
-
+tempMin=Temp min
+tempMax=Temp max
