--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -457,6 +457,9 @@ supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
 
 # rucherMeteo.html
+aujourdhui=Today
+historique=History
+previsions=Forcast
 meteo=Weather
 description=Description
 temperature=Temp
@@ -479,4 +482,5 @@ coucherSoleil=Sun Set
 leverLune=Moon Rise
 coucherLune=Moon Set
 phaseLune=Moon Phase
-
+tempMin=Temp min
+tempMax=Temp max
