--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -463,6 +463,7 @@ previsions=Forcast
 meteo=Weather
 description=Description
 temperature=Temp
+tempRessentie= Temp feel
 humidite=Humid
 rosee=Dew point
 pression=Pressure
